chore: Java 8 compatibility
fix java 8