@@ -22,6 +22,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -70,22 +71,25 @@ public class RockCrafter {
      * @throws IOException - IO error writing <i>rockcraft.yaml</i>
      */
     protected String createRockcraft(Path root, List<File> files) throws IOException {
-        files = files.stream().filter(x -> !x.getName().endsWith("-plain.jar")).toList();
-
+        ArrayList<File> filtered = new ArrayList<File>();
+        for (File file : files) {
+            if (file.getName().endsWith("-plain.jar"))
+                continue;
+            filtered.add(file);
+        }
         List<String> relativeJars = new ArrayList<String>();
-        for (var file : files)
+        for (File file : filtered) {
             relativeJars.add(root.relativize(file.toPath()).toString());
-        DumperOptions options = new DumperOptions();
-        options.setDefaultFlowStyle(DumperOptions.FlowStyle.BLOCK);
-        var yaml = new Yaml(options);
+        }
 
-        var rockcraft = new HashMap<String, Object>();
+
+        HashMap<String, Object> rockcraft = new HashMap<String, Object>();
         rockcraft.put(IRockcraftNames.ROCKCRAFT_NAME, settings.getName());
         rockcraft.put(IRockcraftNames.ROCKCRAFT_VERSION, String.valueOf(settings.getVersion()));
         rockcraft.put("summary", getOptions().getSummary());
-        var description = getOptions().getDescription();
+        Path description = getOptions().getDescription();
         if (description != null) {
-            var descriptionFile = settings.getProjectPath().resolve(description).toFile();
+            File descriptionFile = settings.getProjectPath().resolve(description).toFile();
             if (!descriptionFile.exists())
                 throw new UnsupportedOperationException("Rockcraft plugin description file does not exist.");
             rockcraft.put("description", new String(Files.readAllBytes(descriptionFile.toPath())));
@@ -99,17 +103,14 @@ public class RockCrafter {
 
         rockcraft.put("services", getProjectService(relativeJars));
 
-        rockcraft.put("parts", getProjectParts(files, relativeJars));
-        yamlOutput.append(yaml.dump(rockcraft));
-        yamlOutput.append("\n");
-        rockcraft.clear();
+        rockcraft.put("parts", getProjectParts(filtered, relativeJars));
 
-        return yamlOutput.toString();
+        return new Yaml().dump(rockcraft);
     }
 
     private Map<String, Object> getPlatforms() {
-        var archs = new HashMap<String, Object>();
-        for (var a : getOptions().getArchitectures())
+        HashMap<String, Object> archs = new HashMap<String, Object>();
+        for (RockcraftOptions.RockArchitecture a : getOptions().getArchitectures())
             archs.put(String.valueOf(a), "");
         if (archs.isEmpty())
             archs.put("amd64", "");
@@ -120,9 +121,9 @@ public class RockCrafter {
      * Return list of the chisel slices
      */
     private String getProjectDeps() {
-        var buffer = new StringBuilder();
-        for (var dep : getOptions().getSlices()) {
-            if (!buffer.isEmpty())
+        StringBuilder buffer = new StringBuilder();
+        for (String dep : getOptions().getSlices()) {
+            if (buffer.length() > 0)
                 buffer.append(" ");
             buffer.append(dep);
         }
@@ -137,9 +138,9 @@ public class RockCrafter {
      * @return
      */
     private String getProjectCopyOutput(List<String> relativeJars) {
-        var buffer = new StringBuilder();
+        StringBuilder buffer = new StringBuilder();
         buffer.append("mkdir -p ${CRAFT_PART_INSTALL}/jars\n");
-        for (var jar : relativeJars) {
+        for (String jar : relativeJars) {
             buffer.append(String.format("cp %s ${CRAFT_PART_INSTALL}/jars\n", jar));
         }
 
@@ -148,9 +149,9 @@ public class RockCrafter {
 
     private Map<String, Object> getProjectParts(List<File> files, List<String> relativeJars) {
         IRuntimeProvider provider = getOptions().getJlink() ? new JLinkRuntimePart(getOptions()) : new RawRuntimePart(getOptions());
-        var parts = new HashMap<String, Object>();
+        HashMap<String, Object> parts = new HashMap<String, Object>();
         parts.put(settings.getGeneratorName() + "/rockcraft/dump", getDumpPart(relativeJars));
-        var runtimePart = provider.getRuntimePart(files);
+        Map<java.lang.String,java.lang.Object> runtimePart = provider.getRuntimePart(files);
         runtimePart.put("after", new String[]{
                 settings.getGeneratorName() + "/rockcraft/dump",
                 settings.getGeneratorName() + "/rockcraft/deps"
@@ -161,7 +162,7 @@ public class RockCrafter {
     }
 
     private Map<String, Object> getDumpPart(List<String> relativeJars) {
-        var part = new HashMap<String, Object>();
+        HashMap<String, Object> part = new HashMap<String, Object>();
         part.put("source", ".");
         part.put("plugin", "nil");
         part.put("override-build", getProjectCopyOutput(relativeJars));
@@ -169,7 +170,7 @@ public class RockCrafter {
     }
 
     private Map<String, Object> getDepsPart() {
-        var part = new HashMap<String, Object>();
+        HashMap<String, Object> part = new HashMap<String, Object>();
         part.put("plugin", "nil");
         if (getOptions().getSource() != null) {
             part.put("source", getOptions().getSource());
@@ -183,13 +184,11 @@ public class RockCrafter {
         if (getOptions().getSource() != null) {
             overrideCommands += "--release ./ ";
         }
-        overrideCommands += """
-                --root ${CRAFT_PART_INSTALL}/ libc6_libs \\
-                    libgcc-s1_libs \\
-                    libstdc++6_libs \\
-                    zlib1g_libs \\
-                    base-files_base \\
-                    libnss3_libs """;
+        overrideCommands += " --root ${CRAFT_PART_INSTALL}/ libc6_libs \\\n";
+        overrideCommands += " libgcc-s1_libs \\\n";
+        overrideCommands += " libstdc++6_libs \\\n";
+        overrideCommands += " zlib1g_libs base-files_base \\\n";
+        overrideCommands += " libnss3_libs ";
 
         if (getProjectDeps() != null) {
             overrideCommands += " " + getProjectDeps();
@@ -201,14 +200,13 @@ public class RockCrafter {
 
     private Map<String, Object> getProjectService(List<String> relativeJars) {
         String command = getOptions().getCommand();
-        if (command == null || command.isBlank()) {
+        if (command == null || command.trim().isEmpty()) {
             if (relativeJars.size() == 1) {
-
-                command = String.format("/usr/bin/java -jar /jars/%s", Path.of(relativeJars.iterator().next()).getFileName().toString());
+                command = String.format("/usr/bin/java -jar /jars/%s", Paths.get(relativeJars.iterator().next()).getFileName().toString());
             } else {
                 StringBuffer message = new StringBuffer();
                 message.append("[ ");
-                for (var entry : relativeJars) {
+                for (String entry : relativeJars) {
                     message.append(entry);
                     message.append(" ");
                 }
@@ -216,12 +214,12 @@ public class RockCrafter {
                 throw new UnsupportedOperationException("Rockcraft plugin requires either single jar output or a command defined: " + message);
             }
         }
-        var serviceData = new HashMap<String, String>();
+        HashMap<String, String> serviceData = new HashMap<String, String>();
         serviceData.put("override", "replace");
         serviceData.put("summary", getOptions().getSummary());
         serviceData.put("startup", "enabled");
         serviceData.put("command", command);
-        var services = new HashMap<String, Object>();
+        HashMap<String, Object> services = new HashMap<String, Object>();
         services.put(settings.getName(), serviceData);
         return services;
     }
